<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OCRandTranslationImage">

    <Button
        android:id="@+id/chooseImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="8dp"
        android:text="@string/choose_image"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/recognizeTextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/recognize_text"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/translateTextBtn"
        app:layout_constraintStart_toEndOf="@+id/chooseImageBtn" />

    <Button
        android:id="@+id/translateTextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="8dp"
        android:text="@string/translate"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="673dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="top"
        app:layout_constraintBottom_toTopOf="@+id/recognizeTextBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageIv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:gravity="top"
                android:src="@drawable/insert_picture_icon"
                app:strokeWidth="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="top"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sourceLanguageChooseBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="English"
                    app:cornerRadius="10dp" />

                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:importantForAccessibility="no"
                    android:padding="10dp"
                    android:src="@drawable/baseline_arrow_forward_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/targetLanguageChooseBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Ukrainian"
                    app:cornerRadius="10dp" />

            </LinearLayout>

            <EditText
                android:id="@+id/recognizedTextEt"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:hint="@string/recognized_text"
                android:maxHeight="90dp" />

            <EditText
                android:id="@+id/translatedTextEt"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:hint="@string/translated_text"
                android:maxHeight="90dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>